<resources>
    <string name="app_name" translatable="false">MagicLine</string>
    <string name="principal_top_toolbar" translatable="false">#MagicLine</string>
    <string name="OValues1" translatable="false">Utilizació d\'envasos ecològics</string>
    <string name="OValues2" translatable="false">Punts de reciclatge</string>
    <string name="OValues3" translatable="false">Respecte amb el medi ambient</string>
    <string name="cityFlavor" translatable="false">Barcelona</string>
    <string name="cityParticipants" translatable="false">6260</string>
    <string name="btn_fer_donacio" translatable="false">Fer una  donació</string>
    <string name="recaudats_text" translatable="false">recaptat</string>
    <string name="participants_text" translatable="false">participants</string>
    <string name="mes_info" translatable="false">Més info</string>
    <string name="newsTitle" translatable="false">NOTÍCIES</string>
    <string name="Programming_title" translatable="false">PROGRAMACIÓ</string>
    <string name="text_nav_map">Mapa</string>
    <string name="text_countdown_dies">DIES</string>
    <string name="text_countdown_hores">HORES</string>
    <string name="text_countdown_minuts">MINUTS</string>
    <string name="text_countdown_segons">SEGONS</string>
    <string name="text_rrss">DIFÓN LA MAGIC LINE SJD</string>
    <string name="text_rrss_detail">Comparteix la teva experiència: </string>
    <string name="text_otros_valores">ALTRES VALORS</string>
    <string name="nav_menu_home">Inici</string>
    <string name="nav_menu_programacion">Programació</string>
    <string name="nav_menu_donativos">Donatius</string>
    <string name="nav_menu_options">Opcions</string>
    <string name="mesque_title">més que una caminada</string>
    <string name="mesque_dona">dóna a \n un equip</string>
    <string name="mesque_demana">demana \n donatius</string>
    <string name="mesque_idees">idees de \n captació</string>
    <string name="pdf_donations_collecting_guide">https://www.magiclinesjd.org/files/tiny/Guia%20idees_2019_Barcelona.pdf</string>
    <string name="afons_title">la magic line a fons</string>
    <string name="afons_imprescindibles">Imprescindibles ML</string>
    <string name="googleMapsApiKey" translatable="false">AIzaSyC3ng-Kqyhh5ji9-6eDgp0laXaFrUHfxvY</string>
    <string name="toolbarMap">Recorregut</string>
    <string name="st_boi" translatable="false">"ST.BOI"</string>
    <string name="map_km">Km caminada solidaria:</string>
    <string name="gps_not_available_title">GPS no disponible</string>
    <string name="gps_not_available_text">Si us plau, activa el sensor GPS</string>
    <string name="url_facebook" translatable="false">https://www.facebook.com/magiclineSJD</string>
    <string name="url_twitter" translatable="false">https://twitter.com/magiclineSJD</string>
    <string name="url_telegram" translatable="false">https://t.me/magiclinesjd</string>
    <string name="url_instagram" translatable="false">https://www.instagram.com/magiclinesjd/</string>
    <string name="other_values_title">ALTRES VALORS</string>
    <string name="magic_line_var_title">MagicLine</string>
    <string name="schedule_var_title">Programació</string>
    <string name="donation_var_title">Donatius</string>
    <string name="info_var_title">Més info</string>
    <string name="moreinfo_title">opcions</string>
    <string name="moreinfo_sobre_la_ml">Tot sobre la magic line</string>
    <string name="moreinfo_sitio_web" translatable="false">Anar al lloc web</string>
    <string name="moreinfo_idioma" translatable="false">Idioma</string>
    <string name="moreinfo_amigos" translatable="false">Convida als teus amics</string>
    <string name="moreinfo_sj">San Joan de Deu</string>
    <string name="castellano">Castellà</string>
    <string name="catalan">Català</string>
    <string name="schedule_title">Programació</string>
    <string name="schedule_button_text">Veure més</string>
    <string name="schedule_header_name">activitats durant tot el dia</string>
    <string name="schedule_alldayopen_act">Museus Oberts</string>
    <string name="schedule_header_total_duration">(Total ruta 6h)</string>
    <string name="schedule_alldayopen_desc">Ensenyant el passaturons tens museus gratuïts.</string>
    <string name="viewOnWeb">Veure el web</string>
    <string name="essentials_title">10 imprescindibles Magic Line SJD</string>
    <string name="essentials_subtitle">Mobilització ciudadana en favor de les persones</string>
    <string name="essentials_body">
        <![CDATA[<html>
\t <b>1. MOLT MÉS QUE UNA CAMINADA.</b> Les accions solidàries dels equips es converteixen en ajudes per a persones en situació vulnerable ateses als centres de Sant Joan de Déu i altres entitats properes de la ciutat.<br/><br/>
\t <b>2. UN ALTRE PUNT DE VISTA DE LA CIUTAT.</b> Alceu el cap, la Magic Line SJD us acosta a la muntanya, als parcs urbans, als carrers i a les places de la ciutat. Respecteu l\'entorn! Us recordem que el recorregut de 10 km està adaptat per a persones amb mobilitat reduïda.<br/><br/>
\t <b>3. QUI AJUDES T’AJUDA.</b> Us oferim punts d\’avituallament, aliment complementari per la caminada, que us facilitaran treballadors i treballadores, voluntaris i voluntàries i persones usuàries dels nostres centres.<br/><br/>
\t <b>4. VOLUNTARIAT.</b> Centenars de persones, entitats i empreses aporten el seu temps i serveis per a fer possible l\’esdeveniment.<br/><br/>
\t <b>5. CULTURA INCLUSIVA.</b> Durant el recorregut us trobareu propostes de música i teatre de carrer, així com els museus de Montjuïc i Llobregat oberts per a vosaltres. Gaudiu de la companyia!<br/><br/>
\t <b>6. PICNIC AL CASTELL.</b> Al fossar del Castell de Montjuïc hi teniu una zona per fer una parada, amb música i activitats per fer del dinar una festa, a partir de les 11h i fins les 17h.<br/><br/>
\t <b>7. FESTA SOLIDÀRIA A L\’ARRIBADA.</b> A partir de les 12h a la plaça de la Catedral hi teniu una celebració amb diverses actuacions i activitats per a tots els públics. Pareu atenció als Mercis, uns personatges que us esperen carregats de solidaritat!<br/><br/>
\t <b>8. PRODUCTES MAGIC LINE SJD.</b> Un record de la caminada, que no és només per a tu. Trobaràs botigues de producte solidari al llarg del recorregut i a l\’arribada.<br/><br/>
\t <b>9. EXPLICA LA TEVA EXPERIÈNCIA</b> de #magicliner a les xarxes socials. Que tothom sàpiga que ets part de la #MagicLine de @solidaridadsjd<br/><br/>
\t <b>10. GRÀCIES, GRÀCIES, GRÀCIES.</b> Som milers de persones solidàries omplint la ciutat! Juntes som menys vulnerables!</html>]]>
        </string>
    <string name="essentials_viewOnWeb">https://www.magiclinesjd.org/ca/</string>
    <string name="donations_title">Destí dels fons</string>
    <string name="donations_subtitle">Suport a infants, adults i persones grans</string>
    <string name="donations_body">
        <![CDATA[<html>

   La Magic Line SJD permet finançar programes de suport a <b>infants, adults i persones grans que pateixen situacions de vulnerabilitat</b>. Aquí i arreu del món. Gràcies a les aportacions econòmiques dels equips i al suport de les institucions i empreses treballem en garantir:<br/><br/>
<p><b>\t LLAR.</b> Oferir pisos amb acompanyament psico social a famílies amb pocs recursos, a persones en situació de sense llar, a joves migrants i a persones que demanen refugi.</p>
<p><b>\t OCUPACIÓ.</b> Acompanyar en el procés de recerca de feina a persones amb trastorn mental, amb discapacitat i en situació de sense llar.</p>
<p><b>\t SALUT.</b> Cuidar les persones que atenem més enllà de l\'assistència bàsica, donant-los petits ajuts econòmics si ho requereixen, teràpies parassistencials com musicoteràpia, teràpies amb animals o horticultura i invertint en la cura del futur amb projectes de recerca social i biomèdica.</p>
<p><b>\t COOPERACIÓ INTERNACIONAL.</b> Facilitar l\'atenció a països en desenvolupament fent acompanyament entre professionals i aportant alguns materials especialitzats.</p>

</html>]]>
    </string>
    <string name="donations_viewOnWeb">http://www.magiclinesjd.org/ca/a_qui_ajudem</string>
    <string name="sjd_title" translatable="false">Solidaritat SJD</string>
    <string name="sjd_subtitle">L\’Obra Social Sant Joan de Déu promou la solidaritat per sensibilitzar i implicar la ciutadania entorn a les realitats de vulnerabilitat social que genera la societat.</string>
    <string name="sjd_body">
        <![CDATA[<html>
        Des dels centres socials i sanitaris de l\’Orde Hospitalari SJD cuidem a qui ho necessita: infants, joves, adults i persones grans en situació de sense llar o dependència, amb trastorn mental, amb discapacitat intel·lectual.<br/><br/>
        Ho fem aquí i arreu del món a través d\’agermanaments amb centres de països en situació de pobresa. I ho fem de manera integral, incorporant una mirada sanitària, així com emocional i social a la cura de les persones que atenem.
        </html>]]>
    </string>
    <string name="sjd_viewOnWeb">https://solidaritat.santjoandedeu.org/ca</string>
    <string name="share">Comparteix la teva experiència:</string>
    <string name="inviteFriends">Convida als teus amics \n a l\'app</string>
    <string name="shareAppText">La #MagicLine de @solidaridadsjd ja té APP per a Android i Iphone. Facilita les donacions, les novetats de la mobilització i tots els horaris necessaris el dia de la caminada. Descarrega-te-la!</string>
    <string name="whatsapp" translatable="false">WhatsApp</string>
    <string name="telegram" translatable="false">Telegram</string>
    <string name="messenger" translatable="false">Messenger</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="whats_pkg" translatable="false">com.whatsapp</string>
    <string name="tel_pkg" translatable="false">org.telegram.messenger</string>
    <string name="msn_pkg" translatable="false">com.facebook.orca</string>
    <string name="fb_pkg" translatable="false">com.facebook.katana</string>
    <string name="email_pkg" translatable="false">com.google.android.gm</string>
    <string name="insta_pkg" translatable="false">com.instagram.android</string>
    <string name="twitter_pkg" translatable="false">com.twitter.android</string>
    <string name="appNotInstalled">Aplicació no instal·lada</string>
    <string name="magicLineWeb">http://www.magiclinesjd.org/es/participar_barcelona?gclid=EAIaIQobChMItYzO2vjk3QIVGJzVCh35FQ97EAAYASAAEgKnUPD_BwE</string>
    <string name="donationText">Donatiu</string>
    <string name="magicLineTitle">MagicLine</string>
    <string name="textDonateCause">Fes un donatiu i ajudaràs als equips de la Magic Line a aconseguir el seu repte solidari! El 100% dels fons captats pels equips es destinen a programes d’atenció a persones en situació vulnerable.</string>
    <string name="particularText">Particular</string>
    <string name="EntityText">Entitat</string>
    <string name="importText">No vull publicar l\'import</string>
    <string name="nameImportText">No vull publicar el nom</string>
    <string name="lorem_ipsum" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="ml" translatable="false">#MagicLine</string>
    <string name="mlSjd" translatable="false">Magic Line SJD</string>
</resources>