<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/countdown_timer_height">

    <TextView
        android:id="@+id/ml_title_text"
        style="@style/TopTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/principal_top_toolbar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ml_title_text"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/lato_regular"
        android:text="@string/cityFlavor"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_top_grid"
        android:columnCount="4"
        android:rowCount="2">

        <TextView
            android:id="@+id/countdownDays"
            style="@style/CountDownNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="4dp"
            tools:text="10" />

        <TextView
            android:id="@+id/countdown_hores"
            style="@style/CountDownNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            tools:text="60" />

        <TextView
            android:id="@+id/countdownMin"
            style="@style/CountDownNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            tools:text="10" />

        <TextView
            android:id="@+id/countdownSec"
            style="@style/CountDownNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            tools:text="02" />

        <TextView
            style="@style/CountDownLetters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/text_countdown_dies" />

        <TextView
            style="@style/CountDownLetters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="@string/text_countdown_hores" />

        <TextView
            style="@style/CountDownLetters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:gravity="center_horizontal"
            android:text="@string/text_countdown_minuts" />

        <TextView
            style="@style/CountDownLetters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/text_countdown_segons" />

    </GridLayout>

</RelativeLayout>