<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="148dp"
    android:orientation="vertical"
    android:paddingTop="25dp"
    android:background="@drawable/mes_que_border"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mesque_title"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/grey"
        style="@style/NewsTitle"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="19dp"
        android:layout_marginHorizontal="8dp"
        android:paddingHorizontal="12dp"
        >

            <Button
                android:id="@+id/btnDonateTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_mes_que_not_pressed"
                android:text="@string/mesque_dona"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                style="@style/btn_mes_que"
                android:layout_marginEnd="5dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnRequestDonates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_mes_que_not_pressed"
                android:text="@string/mesque_demana"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                style="@style/btn_mes_que"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"

                />

            <Button
                android:id="@+id/btnBrainStorm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_mes_que_not_pressed"
                android:text="@string/mesque_idees"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                style="@style/btn_mes_que"
                />

    </LinearLayout>

</LinearLayout>