<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inviteFriendsLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingBottom="20dp">

    <ImageView
        android:id="@+id/imageView_cartellBCN"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/moreinfo_amigos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cartell_cat_barcelona" />

    <ImageView
        android:id="@+id/imageView_inviteFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/moreinfo_amigos"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_cartellBCN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/invite_friends" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="@string/inviteFriends"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_cartellBCN"
        app:layout_constraintEnd_toEndOf="@+id/imageView_cartellBCN"
        app:layout_constraintStart_toStartOf="@+id/imageView_cartellBCN"
        app:layout_constraintTop_toBottomOf="@+id/imageView_inviteFriends"
        tools:text="Invita a tus amigos\n a la app." />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_cartellBCN">


        <TextView
            android:id="@+id/textView_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/msn_icon"
            android:drawablePadding="20dp"
            android:padding="25dp"
            android:text="@string/email"
            android:textColor="#4c4c4c"
            android:textSize="14sp"
            tools:text="E-mail" />


        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/lessGreyColor" />


        <TextView
            android:id="@+id/textView_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/facebook_icon"
            android:drawablePadding="20dp"
            android:padding="25dp"
            android:text="@string/facebook"
            android:textColor="#4c4c4c"
            android:textSize="14sp"
            tools:text="Facebook" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/lessGreyColor" />


        <TextView
            android:id="@+id/textView_mesenger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/messenger_icon"
            android:drawablePadding="20dp"
            android:padding="25dp"
            android:text="@string/messenger"
            android:textColor="#4c4c4c"
            android:textSize="14sp"
            tools:text="Messenger" />


        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/lessGreyColor" />


        <TextView
            android:id="@+id/textView_telegram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/telegram_icon"
            android:drawablePadding="20dp"
            android:padding="25dp"
            android:text="@string/telegram"
            android:textColor="#4c4c4c"
            android:textSize="14sp"
            tools:text="Telegram" />


        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/lessGreyColor" />


        <TextView
            android:id="@+id/textView_whats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/whats_icon"
            android:drawablePadding="20dp"
            android:padding="25dp"
            android:text="@string/whatsapp"
            android:textColor="#4c4c4c"
            android:textSize="14sp"
            tools:text="WhatsApp" />


        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/lessGreyColor" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>