<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/countdown_timer_height">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:paddingTop="80dp"
        >

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rowCount="2"
            android:columnCount="4"
            android:layout_centerHorizontal="true"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CountDownNumbers"
                tools:text="10"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginBottom="4dp"
                android:id="@+id/countdown_dies"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CountDownNumbers"
                tools:text="60"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:id="@+id/countdown_hores"
                />
            <TextView
                style="@style/CountDownNumbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="10"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:id="@+id/countdown_min"
                />
            <TextView
                style="@style/CountDownNumbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="02"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:id="@+id/countdown_seg"
                />

            <TextView
                style="@style/CountDownLetters"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:gravity="center_horizontal"
                android:text="@string/text_countdown_dies" />

            <TextView
                style="@style/CountDownLetters"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:gravity="center_horizontal"
                android:text="@string/text_countdown_hores" />

            <TextView
                style="@style/CountDownLetters"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:gravity="center_horizontal"
                android:text="@string/text_countdown_minuts" />

            <TextView
                style="@style/CountDownLetters"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:gravity="center_horizontal"
                android:text="@string/text_countdown_segons" />

        </GridLayout>

    </RelativeLayout>

</RelativeLayout>